[FIX][UI] Fix the card title color contrast, for example in the Plugin... --- * [FIX][UI] Fix the card title color contrast, for example in the Plugin execution pending approval dialog, in the Fivealive and Fivealive-lite themes.
See merge request tikiwiki/tiki!5326

--- a/themes/fivealive-lite/options/lemon/scss/_variables.scss
+++ b/themes/fivealive-lite/options/lemon/scss/_variables.scss
@@ -419,3 +419,7 @@ $btn-link-disabled-color:     $gray-600;  // default
     --bs-accordion-active-color: #000;
     --bs-accordion-btn-bg:  #E7E6AD;
 }
+
+.card-title {
+    --bs-card-title-color: #000;
+}
