--- a/themes/fivealive-lite/scss/_css-variables.scss
+++ b/themes/fivealive-lite/scss/_css-variables.scss
@@ -157,3 +157,7 @@ header.navbar.fixed-top {
 }
 
 // - - - - - New admin pages (Unified Admin Backend) - - - - - - - //
+
+.card-title {
+    --bs-card-title-color: #fff;
+}
