--- a/themes/fivealive/options/grape/scss/_variables.scss
+++ b/themes/fivealive/options/grape/scss/_variables.scss
@@ -401,3 +401,7 @@ $bg-dark-info: #00DAE6;
     --bs-accordion-btn-bg: #A32872;
     --bs-accordion-btn-color: #fff;
 }
+
+.card-title {
+    --bs-card-title-color: #fff;
+}
